# CodingCamp-AI-Job-Recomendation

./: README.MD  cari.ipynb  modeling_case_1.ipynb  requirements.txt
.ipynb_checkpoints/: data_untuk_modeling-checkpoint.csv  preprocessing-checkpoint.ipynb
backend_django/: .env  import_data.py  requirements.txt
backend_django/core/: settings.py  urls.py
backend_django/loker_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend_django/loker_app/migrations/: 0001_initial.py
model_backend/: README.md  main.py  pyproject.toml
model_backend/models/: tokenizer_loker.pkl
model_hasil/: tokenizer_loker.pkl
