[project]
name = "model-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "nltk>=3.9.4",
    "np>=1.0.2",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.27",
    "tensorflow>=2.21.0",
    "uvicorn>=0.46.0",
]
